refactor: migrate examples to Go best practices and add Inner_outer validation
- Move testable examples to package directories (surd/, pkg/matdata/)
- Add comparison examples to internal/comparison/
- Implement native MATLAB reading with pkg/matdata
- Add Inner_outer turbulent flow validation tests (6 scenarios)
- Remove docs/examples/ in favor of standard Go layout
- Validate SURD on real turbulence data (2.4M samples)

--- a/.gitignore
+++ b/.gitignore
@@ -28,5 +28,18 @@ go.work.sum
 .env
 
 # Editor/IDE
-# .idea/
-# .vscode/
+.idea/
+.vscode/
+
+# AI tools
+.claude/
+.gode/
+.goco/
+
+# Private dev documentation
+docs/dev/
+
+# Test data (large CSV files)
+testdata/*.csv
+
+tmp/
